tests/snapshots/serde__de_uint8array_resizable_non_tracking.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nnew Uint8Array(new ArrayBuffer(2, { maxByteLength: 10 })).subarray(0, 1)"
---
=== VALUE ===
HeapReference(*1)

=== HEAP ===
Heap {
    0: ArrayBuffer {
        data: [
            0,
            0,
        ],
        max_byte_length: Some(
            10,
        ),
    },
    1: ArrayBufferView {
        kind: Uint8Array,
        buffer: *0,
        byte_offset: 0,
        length: 1,
        is_length_tracking: false,
        is_backed_by_rab: true,
    },
}

