tests/snapshots/serde__de_uint8array_subarray.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nnew Uint8Array([1, 2]).subarray(1, 2)"
---
=== VALUE ===
HeapReference(*1)

=== HEAP ===
Heap {
    0: ArrayBuffer {
        data: [
            1,
            2,
        ],
        max_byte_length: None,
    },
    1: ArrayBufferView {
        kind: Uint8Array,
        buffer: *0,
        byte_offset: 1,
        length: 1,
        is_length_tracking: false,
        is_backed_by_rab: false,
    },
}

